# grandma-apartment-scraper

./: .gitignore  Cargo.toml
logs/: app.2023-09-24
src/: constants.rs  main.rs  notifier.rs
